Splitter - Corrected spelling to fix missing scrollbars

--- a/packages/default/scss/splitter/_layout.scss
+++ b/packages/default/scss/splitter/_layout.scss
@@ -13,7 +13,7 @@
         .k-pane {
             overflow: hidden;
         }
-        .k-scrollabele {
+        .k-scrollable {
             overflow: auto;
         }
         .k-splitter-resizing {
